# SmartFactory

./: README.md  Readme.txt  first_commit.txt
RelayControl_200608_1709/: RelayControl_200608_1709.ino  iot웹페이지.txt
arm_6dof/: arm_6dof.ino
object_tracking_roi_6dof/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  object_tracking_roi_6dof  object_tracking_roi_6dof.cpp
